--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,9 @@
    "manifest_version": 2,
 
    "background": {
-     "scripts": ["background.js"],
-     "persistent": true
+     "scripts": [
+       "background.js"
+     ]
    },
 
    "browser_action": {
