--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,13 @@
    "version": "1.0",
    "manifest_version": 2,
 
+   "content_scripts": [
+     {
+       "matches": ["<all_urls>"],
+       "js": ["jquery-2.2.4.min.js", "extension.js"]
+     }
+   ],
+
    "background": {
      "scripts": [
        "background.js"
