--- a/manifest.json
+++ b/manifest.json
@@ -7,23 +7,28 @@
    "content_scripts": [
      {
        "matches": ["<all_urls>"],
-       "js": ["jquery-2.2.4.min.js", "extension.js"]
+       "js": [
+         "lib/jquery-3.1.1.min.js",
+         "app/extension.js"
+       ]
      }
    ],
 
    "background": {
+     "persistent": true,
      "scripts": [
-       "background.js"
+       "lib/howler.min.js",
+       "app/background/background.js",
+       "app/background/timer.js"
      ]
    },
 
    "browser_action": {
-      "default_icon": "icon.png",
+      "default_icon": "assets/icon.png",
       "default_title": "Functional Pomodoro Timer",
-      "default_popup":"popup.html"
+      "default_popup":"app/popup.html"
       },
 
      "permissions": [ "tabs", "storage", "webRequest", "background", "webRequestBlocking" ]
-
 
 }
